# Subliminal-Learning-In-Context

./: .gitignore  README.md  analyse_semantic_impact.py  choice_semantic_impact.py  llama_3_tokenizer_stats.py  pyproject.toml  sample_distribution.py  semantic_information.py  visualise_distribution.py  visualise_distribution_qwen.py
dislike_owls/: README.md  run_complete_workflow.py  sample_distribution.py  visualise_distribution.py
dislike_owls/number_experiments/: analyze_results.py  optimized_number_choice_impact.py  run_all_experiments.py
experiments/: concepts.ipynb  concepts_llama.ipynb  filtered_dataset.jsonl  filtered_dataset_owl.jsonl  generate_random_owl.ipynb  in_contex_numbers.ipynb  in_contex_prompt_completions.ipynb  numbers_inlogits.ipynb  numbers_inlogits_biggerModel.ipynb
experiments/owl_animal/: owl_animal_frequencies.json  owl_animal_simple.json
experiments/samples/: control_n10000_20250914_133510.json  control_n10000_20250914_152546.json  delta_control_to_owl_animal_n10000_20250914_133606.json  delta_control_to_owl_animal_n10000_20250914_152757.json  owl_animal_n10000_20250914_133540.json  owl_animal_n10000_20250914_152609.json
experiments/semantic_impact/: ft_gpt-4.1-nano-2025-04-14_arena__CFMfAk0O_owl_animal_choice_n100_20250914_130020_v1.json  ft_gpt-4.1-nano-2025-04-14_arena__CFMfAk0O_owl_animal_n200_20250914_111306_v1.json  gpt-4.1-nano-2025-04-14_owl_animal_choice_n100_20250914_125908_v1.json  (+1 more)
number_experiments/: analyze_results.py  optimized_number_choice_impact.py
tokeniser_statistics/: tokeniser_stats.py
(+45 files in other folders)
